app/assets/stylesheets/main.less
@import "lib/bootstrap/less/bootstrap.less";


.top-buffer { margin-top:20px; }


.horizontal {
   display:inline !important;
   list-style-type: none;
   padding-right: 10px;
}

.section {
  display: inline-block;
  text-align: center;
}

.section > div:nth-of-type(2n+1){
  clear:both;
}

.box {
    margin-top: 5px;
    border: 7px solid;
    border-color: lightblue;
}

.box-last {
     margin-top: 5px;
     border: 7px solid;
     border-color: orange;

}

